@startuml
title Diagrama de Clase Final (POO + MVC-like)

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

class Router {
    -routes: array
    +get(path, handler)
    +post(path, handler)
    +dispatch(uri, method)
    -executeHandler(handler, params)
}

class Database {
    -{static} instance: PDO
    -__construct()
    +{static} getConnection(): PDO
}

class SessionManager {
    +{static} login(id, username)
    +{static} logout()
    +{static} isLoggedIn(): bool
    +{static} getUserId(): int
    +{static} getUsername(): string
}

class User {
    -id: int
    -username: string
    -email: string
    -passwordHash: string
    +getId(): int
    +getUsername(): string
    +getEmail(): string
    +verifyPassword(plain): bool
    +{static} findByUsername(name): ?User
    +{static} create(username, email, password): bool
    +{static} hashPassword(plain): string
}

class Post {
    -id: int
    -userId: int
    -title: string
    -slug: string
    -content: string
    -imagePath: ?string
    -publishedAt: string
    -authorName: string
    +getId(): int
    +getTitle(): string
    +getSlug(): string
    +getContent(): string
    +getImagePath(): ?string
    +getPublishedAt(): string
    +getAuthorName(): string
    +{static} all(): array
    +{static} findBySlug(slug): ?Post
    +{static} findById(id): ?Post
    +{static} create(userId, title, content, imagePath): bool
    +{static} update(id, title, content, imagePath): bool
    +{static} delete(id): bool
    -{static} generateSlug(title): string
}

class FileUploader {
    +{static} upload(file): ?string
}

class HomeController {
    +index()
}

class PostController {
    +index()
    +show(slug)
    +adminIndex()
    +create()
    +store()
    +edit(id)
    +update(id)
    +delete(id)
}

class AuthController {
    +showLogin()
    +login()
    +showRegister()
    +register()
    +logout()
}

class Validator {
    +{static} sanitizeString(str): string
    +{static} validateEmail(email): bool
    +{static} validateLength(str, min, max): bool
}

' Relaciones
Router --> HomeController
Router --> PostController
Router --> AuthController

PostController --> Post
PostController --> FileUploader
PostController --> Validator
PostController --> SessionManager

AuthController --> User
AuthController --> SessionManager
AuthController --> Validator

Post --> Database
User --> Database

FileUploader ..> finfo : usa para MIME

note right of Router
  URLs amigables:
  /blog/mi-titulo
  index.php es el único punto de entrada
end note
@enduml